--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
+                            <a class="nav-link" href="index.html">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Design</a>
