--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <nav class="navbar">
         <ul>
             <li><a href="index.html">Portfolio</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 
@@ -41,9 +41,9 @@
     <section class="hero">
 
         <div class="hero-content">
-            <p class="text-muted"><strong>Design Work Portfolio</strong></p>
+            <p class="text-muted"><strong>Design Portfolio</strong></p>
             <h1>☆ Hi! I'm Kiley, an aspiring designer <br> currently studying at the University of Toronto. </h1>
-            <p class="text-muted">Scroll down to view my work!</p> 
+            <p class="text-muted">Click to explore my work!</p> 
         </div>
     </section>
 
@@ -51,6 +51,8 @@
         <img src="Media/arrow.png" alt="Image of arrow down" class="arrow-img">
     </a>
     
+    <!-- Centered Wrapper -->
+<div class="portfolio-wrapper">
     <!-- Portfolio Section -->
     <section class="portfolio" id="portfolio">
         <div class="portfolio-item">
@@ -58,13 +60,26 @@
                 <img src="Media/TIC Portfolio.png" alt="Project 1">
             </a>
         </div>
+
         <div class="portfolio-item">
             <a href="project2.html">
-                <img src="Media/CCT260Portfolio.png" alt="Project 2">
+                <img src="Media/personalcover.png" alt="Personal Website Process">
+            </a>
+        </div>
+
+        <div class="portfolio-item">
+            <a href="https://www.canva.com/design/DAGXF-lgJ6c/ELrvlI0eiMV8pbHLRINtnQ/view?utm_content=DAGXF-lgJ6c&utm_campaign=designshare&utm_medium=link&utm_source=editor">
+                <img src="Media/Unisync.png" alt="UniSync App Process">
+            </a>
+        </div>
+
+        <div class="portfolio-item">
+            <a href="https://www.canva.com/design/DAGkK-7r4-o/NFrB4-CXdvFI0_A4saqITw/view?utm_content=DAGkK-7r4-o&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h9e8edcf4e6">
+                <img src="Media/rsmcover.png" alt="RSM Case Study: Website Revamp Process">
             </a>
         </div>
     </section>
-
+</div>
 
 
 </body>
