--- a/about.html
+++ b/about.html
@@ -31,8 +31,8 @@
     <nav class="navbar">
         <ul>
             <li><a href="index.html">Portfolio</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 
