--- a/index.html
+++ b/index.html
@@ -27,14 +27,19 @@
     </video>
 </div>
 
-    <!-- Navigation Bar -->
-    <nav class="navbar">
-        <ul>
-            <li><a href="index.html">Portfolio</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
+<!-- Hamburger Menu (Mobile Only) -->
+<input type="checkbox" id="menu-toggle">
+<label for="menu-toggle" class="hamburger">&#9776;</label>
+
+<!-- Navigation Bar -->
+<nav class="navbar">
+  <ul>
+    <li><a href="index.html">Portfolio</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
+
 
 
     <!-- Hero Section -->
