navbar mobile changes

--- a/about.html
+++ b/about.html
@@ -19,6 +19,20 @@
 
 <body>
 
+<!-- Hamburger Menu (Mobile Only) -->
+<input type="checkbox" id="menu-toggle">
+<label for="menu-toggle" class="hamburger">&#9776;</label>
+
+<!-- Navigation Bar -->
+<nav class="navbar">
+  <ul>
+    <li><a href="index.html">Portfolio</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
+
+
 <!-- Animated Logo (Top Left Corner) -->
 <div class="logo-fixed">
     <video autoplay muted playsinline>
@@ -27,14 +41,6 @@
     </video>
 </div>
 
-    <!-- Navigation Bar -->
-    <nav class="navbar">
-        <ul>
-            <li><a href="index.html">Portfolio</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
 
 
 
