about me page changes

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <title>KILEY ZHENG</title>
 
     <!-- Link to external CSS file -->
-    <link href="index.css" rel="stylesheet"> 
+    <link href="about.css" rel="stylesheet"> 
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -41,6 +41,37 @@
     </video>
 </div>
 
+<section class="about-section" id="about">
+    <!-- Heading as a video -->
+    <div class="about-heading">
+      <video autoplay muted loop playsinline class="about-heading-video">
+        <source src="Media/aboutme.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+    </div>
+  
+    <!-- About content -->
+    <div class="about-content">
+      <!-- Text Content -->
+      <div class="about-text">
+        <p>
+          Hi, I’m Kiley Zheng — a Digital Enterprise Management student at the University of Toronto, passionate about blending technology, creativity, and community. My background combines strategic thinking with visual storytelling, and I find joy in creating experiences that feel both thoughtful and meaningful.
+        </p>
+        <p>
+          When I’m not organizing design events, prototyping websites, or exploring the intersection between UX and business, you’ll probably find me sipping matcha (which, let’s be honest, I can’t live without — you can even spot it in my animated logo ☕💚).
+        </p>
+        <p>
+          I’m driven by a deep appreciation for design that solves real problems and makes a positive impact. Whether it's refining user flows or crafting brand stories, I believe that intentional design creates powerful results.
+        </p>
+      </div>
+  
+      <!-- Profile Image -->
+      <div class="about-image">
+        <img src="Media/pfpheadshot.jpg" alt="Photo of Kiley Zheng">
+      </div>
+    </div>
+  </section>
+  
 
 
 
