--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 <section class="about-section" id="about">
     <!-- Heading as a video -->
     <div class="about-heading">
-      <video autoplay muted loop playsinline class="about-heading-video">
+      <video autoplay muted playsinline class="about-heading-video">
         <source src="Media/aboutme.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
