--- a/ticprocess.html
+++ b/ticprocess.html
@@ -83,12 +83,11 @@
     <div class="background-content">
       <h2>Research</h2>
       <p>Check out the payment processors research below ↓  </p>
-      <iframe src="https://1drv.ms/p/c/d429283f160c5cce/IQQYRStTlyMLTI4BVAl6AeCmATvBbff-zo2dY43yGA1pdSA?em=2&amp;wdAr=1.7777777777777777" width="476px" height="288px" 
+      <a href="Media/TICPaymentResearch.pdf" target="_blank">View Payment Processors Research PDF</a>
+      <iframe src="https://1drv.ms/p/c/d429283f160c5cce/IQQYRStTlyMLTI4BVAl6AeCmATvBbff-zo2dY43yGA1pdSA?em=2&amp;wdAr=1.7777777777777777" width="900px" height="506px" 
       frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" 
       href="https://office.com/webapps">Office</a>.</iframe>
     
-     <!-- <a href="Media/TechConnect Progress Report (& Payment Processor Research).zip" download>Download Payment Processors Research PDF</a>-->
-
     </div>
   </section>
 
