tic process changes and footer change

--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,12 @@
 </div>
 </div>
           
- 
+
+<footer class="site-footer">
+    <p><strong>Built from scratch with love.</strong></p>
+    <p>© 2025. Kiley Zheng.</p>
+  </footer>
+  
 
 
 </body>
