--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
     </section>
 </div>
 
+<footer class="site-footer">
+    <p><strong>Built from scratch with love.</strong></p>
+    <p>© 2025. Kiley Zheng.</p>
+  </footer>
+  
 
 </body>
 </html>
