--- a/about.html
+++ b/about.html
@@ -72,10 +72,11 @@
     </div>
   </section>
   
-
-
-
-
+  <footer class="site-footer">
+    <p><strong>Built from scratch with love.</strong></p>
+    <p>© 2025. Kiley Zheng.</p>
+  </footer>
+  
 
 </body>
 </html>
