personal project update

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
 
         <div class="portfolio-item">
-            <a href="project2.html">
+            <a href="CCT260 Project 2- Kiley/index.html">
                 <img src="Media/personalcover.png" alt="Personal Website Process">
             </a>
         </div>
