a bunch of changesss, adding project process to website

--- a/index.html
+++ b/index.html
@@ -67,22 +67,30 @@
         </div>
 
         <div class="portfolio-item">
-            <a href="CCT260 Project 2- Kiley/index.html">
+            <a href="CCT260 Project 2- Kiley/index.html" target="_blank" rel="noopener noreferrer">
                 <img src="Media/personalcover.png" alt="Personal Website Process">
             </a>
         </div>
 
         <div class="portfolio-item">
-            <a href="https://www.canva.com/design/DAGXF-lgJ6c/ELrvlI0eiMV8pbHLRINtnQ/view?utm_content=DAGXF-lgJ6c&utm_campaign=designshare&utm_medium=link&utm_source=editor">
+            <a href="https://www.canva.com/design/DAGXF-lgJ6c/ELrvlI0eiMV8pbHLRINtnQ/view?utm_content=DAGXF-lgJ6c&utm_campaign=designshare&utm_medium=link&utm_source=editor"  target="_blank" rel="noopener noreferrer">
                 <img src="Media/Unisync.png" alt="UniSync App Process">
             </a>
         </div>
 
         <div class="portfolio-item">
-            <a href="https://www.canva.com/design/DAGkK-7r4-o/NFrB4-CXdvFI0_A4saqITw/view?utm_content=DAGkK-7r4-o&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h9e8edcf4e6">
+            <a href="https://www.canva.com/design/DAGkK-7r4-o/NFrB4-CXdvFI0_A4saqITw/view?utm_content=DAGkK-7r4-o&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h9e8edcf4e6" target="_blank" rel="noopener noreferrer">
                 <img src="Media/rsmcover.png" alt="RSM Case Study: Website Revamp Process">
             </a>
         </div>
+
+        <div class="portfolio-item">
+            <a href="CCT360 Project 2/index.html" target="_blank" rel="noopener noreferrer">
+                <img src="Media/personalsite2.png" alt="Personal Site #2 Website Process">
+            </a>
+        </div>
+
+        
     </section>
 </div>
 
