--- a/ticprocess.html
+++ b/ticprocess.html
@@ -113,6 +113,22 @@
 
   <section class="project-process">
     <div class="background-content">
+      <h2>New Site Map</h2>
+      <p>
+        After reviewing the original structure of Turtle Island Charity’s website, our team collaborated to reorganize and simplify the navigation. 
+        The goal was to create a clearer, more intuitive structure that reflects user priorities and reduces cognitive overload. Each section was refined 
+        to align with the organization's needs and ensure a smoother experience for donors, volunteers, and visitors. This site map was a key step in defining 
+        our information architecture moving forward, while also informing the layout, navigation, and overall design decisions made throughout the project.
+      </p>
+  
+      <img src="Media/Turtle Island Charity - Sitemap.png" alt="Turtle Island Charity Site Map"class="sitemap-img">
+    </div>
+  </section>
+  
+  
+
+  <section class="project-process">
+    <div class="background-content">
       <h2>Wireframes & Prototypes</h2>
       <p>Check out the wireframes & prototypes created on Figma below ↓  </p>
       <div class="iframe-container">
@@ -147,7 +163,7 @@
 
     </div>
   </section>
-  
+
   <a href="#top" class="scroll-top-link">Back to top ↑</a>
 
 
