--- a/index.html
+++ b/index.html
@@ -89,6 +89,13 @@
                 <img src="Media/personalsite2.png" alt="Personal Site #2 Website Process">
             </a>
         </div>
+
+        <div class="portfolio-item">
+            <a href="diorprocess.html" target="_blank" rel="noopener noreferrer">
+                <img src="Media/diormicrosite.png" alt="Dior Microsite Site Website Process">
+            </a>
+        </div>
+
     </section>
 </div>
 
