--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
 
         <div class="portfolio-item">
-            <a href="diorprocess.html" target="_blank" rel="noopener noreferrer">
+            <a href="CCT360 Project 1/index.html" target="_blank" rel="noopener noreferrer">
                 <img src="Media/diormicrosite.png" alt="Dior Microsite Site Website Process">
             </a>
         </div>
