tic website change

--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
       <!-- Text Content -->
       <div class="about-text">
         <p>
-          Hi, I’m Kiley Zheng. I study Digital Enterprise Management at the University of Toronto, with passion for blending technology and creativity. 
+          Hello, I’m Kiley Zheng. I study Digital Enterprise Management at the University of Toronto, with passion for blending technology and creativity. 
           My background combines strategic thinking with visual storytelling, and I find joy in creating experiences that feel both meaningful and thoughtful.
         </p>
         <p>
