--- a/ticprocess.html
+++ b/ticprocess.html
@@ -41,6 +41,8 @@
     </video>
 </div>
 
+<p><strong>Check out Turtle Island Charity's full website redesign ↓</strong></p>
+<a href="https://www.turtleislandcharity.com/" target="_blank">www.turtleislandcharity.com</a>
 
 <section class="project-process">
     <div class="background-content">
@@ -157,9 +159,6 @@
 
       <h3><i>Client Feedback</i></h3>
       <img src="Media/JasonLetter.png" alt="Image of Client Feedback" class="feedback-img">
-
-      <p><strong>Check out Turtle Island Charity's full website redesign ↓</strong></p>
-      <a href="www.turtleislandcharity.com" target="_blank">www.turtleislandcharity.com</a>
 
     </div>
   </section>
