change tic link

--- a/ticprocess.html
+++ b/ticprocess.html
@@ -45,9 +45,9 @@
 <section class="project-process">
     <div class="background-content">
 
-      <p><strong>Check out Turtle Island Charity's full website redesign ↓</strong></p>
-      <a href="https://www.turtleislandcharity.com/" target="_blank">www.turtleislandcharity.com</a>
-
+      <p><strong>Check out Turtle Island Charity's new website! ↓</strong></p>
+      <a href="https://www.turtleislandcharity.com/" target="_blank" style="display:inline-block; padding-bottom: 50px;">www.turtleislandcharity.com</a>
+      
         <h2>Background</h2>
         <p>
         Turtle Island Charity is a community-led organization rooted in Indigenous knowledge and values. It supports
